Added Calculate1.html and Calculate2.html

--- a/DotNetCore/MVC/Html&JsDemo/Html&JsDemo/wwwroot/Calculate1.html
+++ b/DotNetCore/MVC/Html&JsDemo/Html&JsDemo/wwwroot/Calculate1.html
@@ -20,7 +20,7 @@
             </tr>
             
             <tr>
-                <td colspan="2" style="text-align: center;">
+                <td style="text-align: center;">
                     <button id="calculateAdd" class="btn btn-primary" style="margin-left: 4px;"><b>Add</b></button>
                     <button id="calculateSubtract" class="btn btn-primary" style="margin-left: 4px;"><b>Subtract</b></button>
                     <button id="calculateMultiply" class="btn btn-primary" style="margin-left: 4px;"><b>Multiply</b></button>
