--- a/DotNetCore/MVC/Html&JsDemo/Html&JsDemo/wwwroot/Calculate2.html
+++ b/DotNetCore/MVC/Html&JsDemo/Html&JsDemo/wwwroot/Calculate2.html
@@ -14,13 +14,13 @@
             <td><input type="text" id="Num2" name="Num2" value="4" /></td>
         </tr>
 
-        <tr>
+        <tr>    
             <td><b>Result:</b></td>
             <td><input type="text" id="Result" name="Result" disabled /></td>
         </tr>
 
         <tr>
-            <td colspan="2" style="text-align: center;">
+            <td style="text-align: center;">
                 
                 <button id="calculateAdd" class="btn btn-primary" style="margin-left: 4px;"><b>Add</b></button>
                 
