Added a new DivShowHideDemo.html and DivShowHideDemo-UsingJQuery.html page in Html&JsDemo project

--- a/DotNetCore/MVC/Html&JsDemo/Html&JsDemo/wwwroot/Calculate1.html
+++ b/DotNetCore/MVC/Html&JsDemo/Html&JsDemo/wwwroot/Calculate1.html
@@ -1,5 +1,10 @@
 ﻿<!DOCTYPE html>
 <html>
+<head>
+    <link href="css/site.css" rel="stylesheet" />
+
+</head>
+
     <body>
         <h1>Calculation 1</h1>
         <br />
